---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> E30_isort.pyi:1:1
  |
1 | / import json
2 | |
3 | |
4 | |
5 | | from typing import Any, Sequence
  | |________________________________^
help: Organize imports
  |
1 + import json
2 + from typing import Any, Sequence
  |

E303 [*] Too many blank lines (3)
 --> E30_isort.pyi:5:1
  |
5 | from typing import Any, Sequence
  | ^^^^
help: Remove extraneous blank line(s)
2 - 
3 - 
4 - 
  |

E303 [*] Too many blank lines (2)
 --> E30_isort.pyi:8:1
  |
8 | class MissingCommand(TypeError): ...  # noqa: N818
  | ^^^^^
help: Remove extraneous blank line(s)
6 - 
7 - 
  |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:11:1
   |
11 | class BackendProxy:
   | ^^^^^
12 |     backend_module: str
13 |     backend_object: str | None
   |
help: Remove extraneous blank line(s)
9 - 
10- 
  |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:17:1
   |
17 | if __name__ == "__main__":
   | ^^
18 |     import abcd
   |
help: Remove extraneous blank line(s)
15 - 
16 - 
   |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:21:5
   |
21 |     abcd.foo()
   |     ^^^^
22 |
23 | def __init__(self, backend_module: str, backend_obj: str | None) -> None: ...
   |
help: Remove extraneous blank line(s)
19 - 
20 - 
   |

I001 [*] Import block is un-sorted or un-formatted
  --> E30_isort.pyi:26:5
   |
25 |   if TYPE_CHECKING:
26 | /     import os
27 | |
28 | |
29 | |
30 | |     from typing_extensions import TypeAlias
   | |___________________________________________^
help: Organize imports
   |
26 +     import os
27 + 
28 +     from typing_extensions import TypeAlias
   |

E303 [*] Too many blank lines (3)
  --> E30_isort.pyi:30:5
   |
30 |     from typing_extensions import TypeAlias
   |     ^^^^
help: Remove extraneous blank line(s)
27 - 
28 - 
29 - 
   |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:33:5
   |
33 |     abcd.foo()
   |     ^^^^
34 |
35 | def __call__(self, name: str, *args: Any, **kwargs: Any) -> Any:
   |
help: Remove extraneous blank line(s)
31 - 
32 - 
   |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:45:1
   |
45 | def _exit(self) -> None: ...
   | ^^^
help: Remove extraneous blank line(s)
43 - 
44 - 
   |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:48:1
   |
48 | def _optional_commands(self) -> dict[str, bool]: ...
   | ^^^
help: Remove extraneous blank line(s)
46 - 
47 - 
   |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:51:1
   |
51 | def run(argv: Sequence[str]) -> int: ...
   | ^^^
help: Remove extraneous blank line(s)
49 - 
50 - 
   |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:54:1
   |
54 | def read_line(fd: int = 0) -> bytearray: ...
   | ^^^
help: Remove extraneous blank line(s)
52 - 
53 - 
   |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:57:1
   |
57 | def flush() -> None: ...
   | ^^^
help: Remove extraneous blank line(s)
55 - 
56 - 
   |

E303 [*] Too many blank lines (2)
  --> E30_isort.pyi:60:1
   |
60 | from typing import Any, Sequence
   | ^^^^
61 |
62 | class MissingCommand(TypeError): ...  # noqa: N818
   |
help: Remove extraneous blank line(s)
58 - 
59 - 
   |
